=== HEAD

* Add Model#cancel_action for canceling actions in before hooks, instead of having the hooks return false (jeremyevans)

* Support not setting @@wait_timeout on MySQL via :timeout=>nil Database option (jeremyevans)

* Add accessed_columns plugin, recording which columns have been accessed for a model instance (jeremyevans)

* Use correct migration version when using IntegerMigrator with :allow_missing_migration_files (blerins) (#938)

* Make Dataset#union, #intersect, and #except automatically handle datasets with raw SQL (jeremyevans) (#934)

* Add column_conflicts plugin to automatically handle columns that conflict with method names (jeremyevans) (#929)

* Add Model#get_column_value and #set_column_value to get/set column values (jeremyevans) (#929)

=== 4.18.0 (2015-01-02)

* Make Dataset#empty? work when the dataset is ordered by a non-column expression (pete) (#923)

* Fix passing a hash value to :eager association option (jeremyevans)

* Treat all PG::ConnectionBad exceptions as disconnect errors in the postgres adapter (jeremyevans)

* Add :auto_increment key to schema information for primary key columns (jeremyevans) (#919)

* Fix handling of schema qualified tables in many_through_many associations (jeremyevans)

=== 4.17.0 (2014-12-01)

* Fix handling of Sequel::SQL::Blob instances in bound variables in the postgres adapter (jeremyevans) (#917)

* Add :preconnect Database option for immediately creating the maximum number of connections (jeremyevans)

* Support DB.pool.max_size for the single connection pools (jeremyevans)

* Work around regression in jdbc-sqlite3 3.8.7 where empty blobs are returned as nil (jeremyevans)

* Work around regression in jdbc-sqlite3 3.8.7 when using JDBC getDate method for date parsing (jeremyevans)

* Make Model#update_or_create return object if existing object exists but updates are not necessary (contentfree) (#916)
